--- a/Prevu.Synoptics.V2502_Polymer_Processor/P210.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P210.xaml
@@ -292,9 +292,9 @@
             VerticalAlignment="Top" 
             ComponentName="220-41-LT1" Grid.Row="1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="443,72,0,0" 
+            Margin="205,73,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="210-71-ECS6" Loaded="DeviceLabel_Loaded"/>
+            ComponentName="210-71-ECS3" Loaded="DeviceLabel_Loaded"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="348,73,0,0" 
             VerticalAlignment="Top" 
@@ -318,5 +318,9 @@
             Margin="423,217,0,0" 
             VerticalAlignment="Top" 
             ComponentName="210-01-MA1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="443,73,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="210-71-ECS6" Loaded="DeviceLabel_Loaded"/>
     </Grid>
 </UserControl>
