--- a/Prevu.Synoptics.V2502_Polymer_Processor/PlantView.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/PlantView.xaml
@@ -11,7 +11,42 @@
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" 
              d:Height="840" d:Width="1700" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid>
-            
+    <Grid Height="840" Width="1700">
+        <Rectangle Height="600" Stroke="Black" Width="1470" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2"/>
+
+        <Machines:QX_HMI HorizontalAlignment="Left" Margin="1410,260,0,0" VerticalAlignment="Top" Height="136" Width="125"/>
+        <Machines:QX_HMI HorizontalAlignment="Left" Margin="1410,510,0,0" VerticalAlignment="Top" Height="136" Width="125"/>
+        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="150,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
+        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="433,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
+        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="595,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
+        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="757,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
+        <Labels:DeviceLabel x:Name="Q41" HorizontalAlignment="Left" Margin="445,205,0,0" VerticalAlignment="Top" ComponentName="Q41"/>
+        <Labels:DeviceLabel x:Name="Q51" HorizontalAlignment="Left" Margin="607,205,0,0" VerticalAlignment="Top" ComponentName="Q61"/>
+        <Labels:DeviceLabel x:Name="Q71" HorizontalAlignment="Left" Margin="769,205,0,0" VerticalAlignment="Top" ComponentName="Q71"/>
+        <Labels:DeviceLabel x:Name="Q01" HorizontalAlignment="Left" Margin="162,205,0,0" VerticalAlignment="Top" ComponentName="Q01"/>
+        <Labels:DeviceLabel x:Name="ESTOP" HorizontalAlignment="Left" Margin="115,53,0,0" VerticalAlignment="Top" ComponentName="ESTOP-AREA-01"/>
+        <Labels:DeviceLabel x:Name="HMI_01" HorizontalAlignment="Left" Margin="1427,185,0,0" VerticalAlignment="Top" ComponentName="HMI-01"/>
+        <Labels:DeviceLabel x:Name="HMI_02" HorizontalAlignment="Left" Margin="1427,435,0,0" VerticalAlignment="Top" ComponentName="HMI-02"/>
+        <Labels:DeviceLabel x:Name="S410" HorizontalAlignment="Left" Margin="445,431,0,0" VerticalAlignment="Top" ComponentName="S410"/>
+        <Labels:DeviceLabel x:Name="S510" HorizontalAlignment="Left" Margin="607,431,0,0" VerticalAlignment="Top" ComponentName="S610"/>
+        <Labels:DeviceLabel x:Name="S710" HorizontalAlignment="Left" Margin="769,431,0,0" VerticalAlignment="Top" ComponentName="S710"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="1081,510,0,0" VerticalAlignment="Top" GroupName="530"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="433,510,0,0" VerticalAlignment="Top" GroupName="210"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="595,510,0,0" VerticalAlignment="Top" GroupName="420"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="919,510,0,0" VerticalAlignment="Top" GroupName="520"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="757,510,0,0" VerticalAlignment="Top" GroupName="510"/>
+        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="919,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
+        <Labels:DeviceLabel x:Name="Q71_Copy" HorizontalAlignment="Left" Margin="931,205,0,0" VerticalAlignment="Top" ComponentName="Q72"/>
+        <Labels:DeviceLabel x:Name="S710_Copy" HorizontalAlignment="Left" Margin="931,431,0,0" VerticalAlignment="Top" ComponentName="S720"/>
+        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="1081,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
+        <Labels:DeviceLabel x:Name="Q71_Copy1" HorizontalAlignment="Left" Margin="1093,205,0,0" VerticalAlignment="Top" ComponentName="Q73"/>
+        <Labels:DeviceLabel x:Name="S710_Copy1" HorizontalAlignment="Left" Margin="1093,431,0,0" VerticalAlignment="Top" ComponentName="S730"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="493,510,0,0" VerticalAlignment="Top" GroupName="230"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="433,570,0,0" VerticalAlignment="Top" GroupName="282"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="595,630,0,0" VerticalAlignment="Top" GroupName="680"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="655,510,0,0" VerticalAlignment="Top" GroupName="464"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="595,570,0,0" VerticalAlignment="Top" GroupName="474"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="655,570,0,0" VerticalAlignment="Top" GroupName="484"/>
+
     </Grid>
 </UserControl>
