--- a/Prevu.Synoptics.V3001-COVERIS/PlantView.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/PlantView.xaml
@@ -30,18 +30,21 @@
 		<Labels:DeviceLabel x:Name="HMI_01" HorizontalAlignment="Left" Margin="1427,185,0,0" VerticalAlignment="Top" ComponentName="HMI-01"/>
 		<Labels:DeviceLabel x:Name="HMI_02" HorizontalAlignment="Left" Margin="1427,435,0,0" VerticalAlignment="Top" ComponentName="HMI-02"/>
 		<Labels:DeviceLabel x:Name="S410" HorizontalAlignment="Left" Margin="535,431,0,0" VerticalAlignment="Top" ComponentName="S410"/>
-		<Labels:DeviceLabel x:Name="S510" HorizontalAlignment="Left" Margin="696,431,0,0" VerticalAlignment="Top" ComponentName="S510"/>
+		<Labels:DeviceLabel x:Name="S510" HorizontalAlignment="Left" Margin="654,431,0,0" VerticalAlignment="Top" ComponentName="S510"/>
 		<Labels:DeviceLabel x:Name="S610" HorizontalAlignment="Left" Margin="850,431,0,0" VerticalAlignment="Top" ComponentName="S610"/>
 		<Labels:DeviceLabel x:Name="S710" HorizontalAlignment="Left" Margin="1004,431,0,0" VerticalAlignment="Top" ComponentName="S710"/>
 		<Labels:GroupLabel HorizontalAlignment="Left" Margin="981,510,0,0" VerticalAlignment="Top" GroupName="520"/>
 		<Labels:GroupLabel HorizontalAlignment="Left" Margin="547,510,0,0" VerticalAlignment="Top" GroupName="230"/>
-		<Labels:GroupLabel HorizontalAlignment="Left" Margin="675,510,0,0" VerticalAlignment="Top" GroupName="330"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="675,510,0,0" VerticalAlignment="Top" GroupName="320"/>
 		<Labels:GroupLabel HorizontalAlignment="Left" Margin="1051,510,0,0" VerticalAlignment="Top" GroupName="810"/>
 		<Labels:GroupLabel HorizontalAlignment="Left" Margin="827,510,0,0" VerticalAlignment="Top" GroupName="460"/>
 		<Labels:GroupLabel HorizontalAlignment="Left" Margin="897,510,0,0" VerticalAlignment="Top" GroupName="490"/>
-		<Labels:GroupLabel HorizontalAlignment="Left" Margin="745,510,0,0" VerticalAlignment="Top" GroupName="350"/>
-		<Labels:GroupLabel HorizontalAlignment="Left" Margin="745,585,0,0" VerticalAlignment="Top" GroupName="380"/>
-		<Labels:GroupLabel HorizontalAlignment="Left" Margin="827,585,0,0" VerticalAlignment="Top" GroupName="514"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="745,510,0,0" VerticalAlignment="Top" GroupName="330"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="745,559,0,0" VerticalAlignment="Top" GroupName="371"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="827,559,0,0" VerticalAlignment="Top" GroupName="514"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="675,559,0,0" VerticalAlignment="Top" GroupName="350"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="675,608,0,0" VerticalAlignment="Top" GroupName="380"/>
+        <Labels:DeviceLabel x:Name="S510_Copy" HorizontalAlignment="Left" Margin="745,431,0,0" VerticalAlignment="Top" ComponentName="S511"/>
 
-	</Grid>
+    </Grid>
 </UserControl>
