--- a/Prevu.Synoptics.V2502_Polymer_Processor/P420.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P420.xaml
@@ -9,9 +9,9 @@
              x:Class="Prevu.Synoptics.P420" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="100,132,0,0" VerticalAlignment="Top" Width="147" Color="Water" StatusComponent="420-71-ECS1" VisibilityComponent=""/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="246,138,0,0" VerticalAlignment="Top" Width="67" Color="Water" StatusComponent="420-71-ECS1" VisibilityComponent=""/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="246,124,0,0" VerticalAlignment="Top" Width="67" Color="Water" StatusComponent="420-71-ECS1" VisibilityComponent=""/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="129,147,0,0" VerticalAlignment="Top" Width="118" Color="Water" StatusComponent="420-71-ECS1" VisibilityComponent=""/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="246,153,0,0" VerticalAlignment="Top" Width="67" Color="Water" StatusComponent="420-71-ECS1" VisibilityComponent=""/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="246,139,0,0" VerticalAlignment="Top" Width="67" Color="Water" StatusComponent="420-71-ECS1" VisibilityComponent=""/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="903,203,0,0" VerticalAlignment="Top" Width="222" StatusComponent="430-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -45,7 +45,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="309,89,0,0" VerticalAlignment="Top" Width="236" Color="Water" StatusComponent="420-71-ECS1" VisibilityComponent=""/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="286,162,0,0" VerticalAlignment="Top" Color="Water" Width="52" RenderTransformOrigin="0.5,0.5" StatusComponent="420-71-ECS1" VisibilityComponent="">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="294,170,0,0" VerticalAlignment="Top" Color="Water" Width="36" RenderTransformOrigin="0.5,0.5" StatusComponent="420-71-ECS1" VisibilityComponent="">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -57,7 +57,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="739,735,0,0" VerticalAlignment="Top" Width="268" Color="Water" StatusComponent="450-02-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="120,309,0,0" VerticalAlignment="Top" Width="248" Color="Water" StatusComponent="450-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="122,204,0,0" VerticalAlignment="Top" Width="258" StatusComponent="233-01-MA1" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="154,204,0,0" VerticalAlignment="Top" Width="226" StatusComponent="233-01-MA1" PipeHeight="Medium"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="120,735,0,0" VerticalAlignment="Top" Width="462" Color="Water" StatusComponent="450-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="-92,522,0,0" VerticalAlignment="Top" Width="428" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="450-01-MA1">
             <Labels:Pipe.RenderTransform>
@@ -117,7 +117,7 @@
             JumpFromLabel="450-03-MA1" 
             JumpToLabel="210-01-MA1"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
-                      Margin="60,174,0,0" 
+                      Margin="88,173,0,0" 
                       VerticalAlignment="Top" 
                       JumpFromLabel="420-01-MA1" 
                       JumpToLabel="380-01-MA1"/>
@@ -463,14 +463,14 @@
             VerticalAlignment="Top" 
             ComponentName="420-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="121,35,0,0" 
+            Margin="149,35,0,0" 
             VerticalAlignment="Top" 
             ComponentName="420-71-ECS1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="216,36,0,0" 
+            Margin="149,90,0,0" 
             VerticalAlignment="Top" 
             ComponentName="420-71-ECS5"/>
-        <Rectangle HorizontalAlignment="Left" Height="2" Margin="56,117,0,0" Stroke="Black" VerticalAlignment="Top" Width="90" RenderTransformOrigin="0.5,0.5">
+        <Rectangle HorizontalAlignment="Left" Height="2" Margin="84,117,0,0" Stroke="Black" VerticalAlignment="Top" Width="90" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -480,7 +480,7 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Machines:External HorizontalAlignment="Left" Margin="71,29,0,0" VerticalAlignment="Top" Height="58" Width="60" RenderTransformOrigin="0.5,0.5">
+        <Machines:External HorizontalAlignment="Left" Margin="99,29,0,0" VerticalAlignment="Top" Height="58" Width="60" RenderTransformOrigin="0.5,0.5">
             <Machines:External.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -490,7 +490,7 @@
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
-        <Rectangle HorizontalAlignment="Left" Height="46" Margin="244,112,0,0" Stroke="Black" VerticalAlignment="Top" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5">
+        <Rectangle HorizontalAlignment="Left" Height="46" Margin="244,127,0,0" Stroke="Black" VerticalAlignment="Top" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -500,7 +500,7 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="292,106,0,0" VerticalAlignment="Top" Color="Water" Width="38" RenderTransformOrigin="0.5,0.5" StatusComponent="420-71-ECS1" VisibilityComponent="">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="284,114,0,0" VerticalAlignment="Top" Color="Water" Width="54" RenderTransformOrigin="0.5,0.5" StatusComponent="420-71-ECS1" VisibilityComponent="">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -510,5 +510,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="28,90,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="420-71-ECS3"/>
     </Grid>
 </UserControl>
